--- a/Logger/Logger.csproj
+++ b/Logger/Logger.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.0-preview.4.21253.1" />
+    </ItemGroup>
+
 </Project>
