--- a/Logger/Logger.csproj
+++ b/Logger/Logger.csproj
@@ -8,4 +8,10 @@
       <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.0-preview.4.21253.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="PresentationFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+        <HintPath>C:\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\5.0.0\ref\net5.0\PresentationFramework.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
