--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DB_Connection\DB_Connection.csproj" />
     <ProjectReference Include="..\Net\Net.csproj" />
   </ItemGroup>
 
