--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +7,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DB_Connection\DB_Connection.csproj" />
-    <ProjectReference Include="..\Net\Net.csproj" />
   </ItemGroup>
 
 </Project>
