Добавлено легирование SQLite и немного переоформлен код

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.csproj" />
     <ProjectReference Include="..\Message_Types\Message_Types.csproj" />
   </ItemGroup>
 
