fix read data from config.json

--- a/DB_Connection/DB_Connection.csproj
+++ b/DB_Connection/DB_Connection.csproj
@@ -47,4 +47,10 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="config.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
